# background-remover

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: fetch-models.ps1  fetch-models.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/: README.md
src-tauri/src/: commands.rs  compose.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/inference/: decoder.rs  encoder.rs  matte.rs  mod.rs
src/lib/: ipc.ts
src/lib/actions/: clipboard.ts
src/lib/canvas/: render.ts
src/lib/components/: AboutOverlay.svelte  Inspector.svelte  SetupBanner.svelte  ShortcutsOverlay.svelte  Stage.svelte  StatusBar.svelte  Toolbar.svelte
src/lib/stores/: document.svelte.ts  persist.ts  smart.svelte.ts  ui.svelte.ts
