[package]
name = "background-remover"
version = "0.1.0"
description = "Offline, privacy-first background remover"
authors = ["Ethem Demirkaya"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "background_remover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff"] }
fast_image_resize = "5"

ort = { version = "2.0.0-rc.10", default-features = false, features = ["ndarray", "download-binaries", "tls-rustls"] }
ndarray = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
